# news

./: .gitignore  .gitmodules  LICENSE  README.md  pixi.toml  pyproject.toml
.news/: conda_update.yml
news/: __init__.py  __main__.py  _base.py  conda_update.py  mozilla_update.py
