[project]
name = 'news'
dependencies = ['mozdownload >=1.29.0']
requires-python = '>=3.9'
readme = 'README.md'

[[project.authors]]
name = 'snekdesign'

[project.license]
file = 'LICENSE'

[project.urls]
Repository = 'https://github.com/snekdesign/news'

[tool.pixi.project]
version = '2024.11.24'
channels = ['conda-forge']
platforms = ['linux-64', 'win-64']

[tool.pixi.dependencies]
attrs = '>=19.2.0'
distro = '>=1.4.0'
conda = '*'
progressbar2 = '>=3.34.3'
pydantic-settings = '>=2.3.0'
py-rattler = '>=0.7.2'
six = '>=1.13.0'

[tool.pixi.pypi-options]
index-url = 'https://mirrors.cernet.edu.cn/pypi/web/simple'

[tool.pixi.tasks]
check = 'python -m news'

[tool.news.conda-update]
cache_path = 'E:\var\cache\rattler\repodata'
channels = ['conda-forge']
platforms = ['linux-64', 'noarch']
specs = [
    'dotnet-runtime >=9.0.0',
    'ffmpeg >=7.1.1',
    'micromamba >=2.0.7',
    'py-rattler >=0.10.1',
    'shell >=0.3.0',
    'uv >=0.7.0',
]
mirrored_channels = [
    'auto',
    'biobakery',
    'bioconda',
    'c4aarch64',
    'caffe2',
    'conda-forge',
    'deepmodeling',
    'dglteam',
    'fastai',
    'fermi',
    'idaholab',
    'intel',
    'matsci',
    'menpo',
    'MindSpore',
    'mordred-descriptor',
    'msys2',
    'numba',
    'ohmeta',
    'omnia',
    'Paddle',
    'peterjc123',
    'plotly',
    'psi4',
    'pytorch',
    'pytorch-lts',
    'pytorch-test',
    'pytorch3d',
    'pyviz',
    'qiime2',
    'rapidsai',
    'rdkit',
    'simpleitk',
    'stackless',
    'ursky',
]

[[tool.news.mozilla-update.specs]]
application = 'firefox'
extension = 'msix'
locale = 'multi'
