[project]
name = 'news'
dependencies = ['mozdownload >=1.29.0']
requires-python = '>=3.9'
readme = 'README.md'

[[project.authors]]
name = 'snekdesign'

[project.license]
file = 'LICENSE'

[project.urls]
Repository = 'https://github.com/snekdesign/news'

[tool.pixi.project]
version = '2025.5.25'
channels = ['conda-forge']
platforms = ['linux-64', 'win-64']

[tool.pixi.dependencies]
attrs = '>=19.2.0'
distro = '>=1.4.0'
progressbar2 = '>=3.34.3'
pydantic-settings = '>=2.3.0'
py-rattler = '>=0.13.0'
requests = '>=2.21.0,<3.0.0'
six = '>=1.13.0'

[tool.pixi.tasks]
check = 'python -m news'

[tool.news.conda-update]
cache_path = 'E:\var\cache\rattler\repodata'
channels = ['conda-forge']
platforms = ['linux-64', 'noarch']
specs = [
    'ffmpeg >=8.0.1',
    'ollama >=0.11.7',
    'shell >=0.3.0',
]
mirrored_channels = [
    'auto',
    'biobakery',
    'bioconda',
    'c4aarch64',
    'caffe2',
    'conda-forge',
    'deepmodeling',
    'dglteam',
    'fastai',
    'fermi',
    'idaholab',
    'intel',
    'matsci',
    'menpo',
    'MindSpore',
    'mordred-descriptor',
    'msys2',
    'numba',
    'ohmeta',
    'omnia',
    'Paddle',
    'peterjc123',
    'plotly',
    'psi4',
    'pytorch',
    'pytorch-lts',
    'pytorch-test',
    'pytorch3d',
    'pyviz',
    'qiime2',
    'rapidsai',
    'rdkit',
    'simpleitk',
    'stackless',
    'ursky',
]

# [[tool.news.mozilla-update.specs]]
# application = 'firefox'
# extension = 'msix'
# locale = 'multi'
