[project]
name = 'news'
version = '2026.5.1'
dependencies = ['mozdownload >=1.29.0']
requires-python = '>=3.14'
readme = 'README.md'
license-files = ['LICENSE']

[[project.authors]]
name = 'snekdesign'

[project.urls]
Repository = 'https://github.com/snekdesign/news'

[tool.pixi.workspace]
channels = ['conda-forge']
platforms = ['win-64']

[tool.pixi.dependencies]
attrs = '>=19.2.0'
distro = '>=1.4.0'
progressbar2 = '>=3.34.3'
requests = '>=2.21.0,<3.0.0'
six = '>=1.13.0'

[tool.pixi.tasks]
check = 'mozdownload -d .cache --extension msix -l multi -v latest-esr'
